wacom: Maintain per-device calibration notifications

All information around calibration notifications is now in a separate
struct, set as GObject data on the GsdWacomDevice. On calibration checks,
each device updates its notication as required. This fixes:

1) The notification being possibly not shown if multiple in-screen devices
   are present. If the resolution changes on one monitor, but the device on
   the other monitor is checked last, the notification was then closed/removed.

2) Older but still valid notifications disappearing if a second device needs
   calibration.

https://bugzilla.gnome.org/show_bug.cgi?id=700461